--- a/ping.yml
+++ b/ping.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  become: true
+  become: false
   tasks:
     #- name: Verificar conectividad (ping)
       #ansible.builtin.ping:
