--- a/ping.yml
+++ b/ping.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: all
   become: true
+  become_user: root
   tasks:
     #- name: Verificar conectividad (ping)
       #ansible.builtin.ping:
