--- a/status-exporter2.yml
+++ b/status-exporter2.yml
@@ -5,9 +5,9 @@
 
 - name: node_exporter status as a service
   hosts: all
-  become: yes
-  become_method: sudo
-  become_user: jantunez
+  #become: yes
+  #become_method: sudo
+  #become_user: jantunez
   tasks:
 
   # in order to check if node exporter is installed we call exporter-installed.yml
